--- a/myconfig.json
+++ b/myconfig.json
@@ -1,5 +1,6 @@
 {
-  "server_ip_addr": "Super hero squad",
+  "server_ip_addr": "192.168.128.5",
+  "server_port_preprobing": 7777,
   "udp_src_port": 9876,
   "udp_dst_port": 8765
 }
